[package]
name = "nextflow_utils"
authors = ["Mark-S-Hill"]
description = "Nextflow Utilities"
version = "0.0.1"
edition = "2018"

[dependencies]
structopt = "0.3.23"
regex = "1.5.4"
git2 = "0.13.23"

[[bin]]
name = "gpwd"
path = "src/gpwd.rs"

[[bin]]
name = "nferr"
path = "src/nferr.rs"

[[bin]]
name = "nfinit"
path = "src/nfinit.rs"